--- a/materie.html
+++ b/materie.html
@@ -67,7 +67,7 @@
     <div class="gt_sub_banner_bg default_width">
         <div class="container">
             <div class="gt_sub_banner_hdg  default_width">
-                <h3>La Materie</h3>
+                <h3>La Didattica</h3>
             </div>
         </div>
     </div>
