--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link href="css/color.css" rel="stylesheet">
     <!-- Responsive CSS -->
     <link href="css/responsive.css" rel="stylesheet">
+    <!-- Flaticon -->
+    <link href="css/flaticon.css" rel="stylesheet">
   </head>
 
   <body>
@@ -78,7 +80,7 @@
                         <li><a href="javascript:avoid(0);">La Scuola</a>
                             <ul>
                                 <li><a href="giornata-tipo.html">La giornata tipo</a></li>
-                                <li><a href="materie.html">Le materie</a></li>
+                                <li><a href="materie.html">La didattica</a></li>
                                 <li><a href="insegnanti.html">Gli insegnanti</a></li>
                             </ul>
                         </li>
@@ -140,7 +142,7 @@
                     <div class="col-md-3">
                         <div class="gt_main_services bg_1">
                             <i class="icon-write-board"></i>
-                            <h5>Le materie</h5>
+                            <h5>La didattica</h5>
                             <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. </p>
                             <a  class="bg_1" href="materie.html"> <i class="fa fa-arrow-right"></i></a>
                         </div>
@@ -157,7 +159,7 @@
                     
                     <div class="col-md-3">
                         <div class="gt_main_services bg_3">
-                            <i class="icon-compass"></i>
+                            <i class="flaticon-donate"></i>
                             <h5>Sostienici</h5>
                             <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. </p>
                              <a class="bg_3" href="donazioni.html"> <i class="fa fa-arrow-right"></i></a>
@@ -166,7 +168,7 @@
                     
                     <div class="col-md-3">
                         <div class="gt_main_services bg_4">
-                            <i class="icon-number-blocks"></i>
+                            <i class="flaticon-letter"></i>
                             <h5>Contatti</h5>
                             <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. </p>
                               <a class="bg_4" href="contatti.html"> <i class="fa fa-arrow-right"></i></a>
