--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -45,7 +45,7 @@
                             <li><a href="javascript:avoid(0);">La Scuola</a>
                                 <ul>
                                     <li><a href="giornata-tipo.html">La giornata tipo</a></li>
-                                    <li><a href="materie.html">Le materie</a></li>
+                                    <li><a href="materie.html">La didattica</a></li>
                                     <li><a href="insegnanti.html">Gli insegnanti</a></li>
                                 </ul>
                             </li>
