--- a/materie.html
+++ b/materie.html
@@ -47,7 +47,7 @@
                             <li class="active"><a href="javascript:avoid(0);">La Scuola</a>
                                 <ul>
                                     <li><a href="giornata-tipo.html">La giornata tipo</a></li>
-                                    <li class="active"><a href="materie.html">Le materie</a></li>
+                                    <li class="active"><a href="materie.html">La didattica</a></li>
                                     <li><a href="insegnanti.html">Gli insegnanti</a></li>
                                 </ul>
                             </li>
