Fixes link in logo

--- a/materie.html
+++ b/materie.html
@@ -31,7 +31,7 @@
             <div class="gt_top3_menu default_width">
                 <div class="container">
                     <div class="gt-logo">
-                        <a href="#"><img src="images/logo.png" alt=""></a>
+                        <a href="index.html"><img src="images/logo.png" alt=""></a>
                     </div>
                     <nav class="gt_hdr3_navigation">
                         <!-- Responsive Buttun -->
@@ -89,7 +89,7 @@
                                 <div class="gt_wht_offer_wrap mb">
                                     <i class="flaticon-blackboard bg_5"></i>
                                     <div class="gt_wht_offer_des">
-                                        <h5><a href="#">Italiano</a></h5>
+                                        <h5><a href="javascript:avoid(0);">Italiano</a></h5>
                                         <span class="bg_offer_1"></span>
                                         <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet avida nibh vel velit auctor aliquet.</p>
                                     </div>
@@ -99,7 +99,7 @@
                                 <div class="gt_wht_offer_wrap mb">
                                     <i class="flaticon-maths bg_4"></i>
                                     <div class="gt_wht_offer_des">
-                                        <h5><a href="#">Matematica</a></h5>
+                                        <h5><a href="javascript:avoid(0);">Matematica</a></h5>
                                         <span class="bg_offer_2"></span>
                                         <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet avida nibh vel velit auctor aliquet.</p>
                                     </div>
@@ -109,7 +109,7 @@
                                 <div class="gt_wht_offer_wrap mb">
                                     <i class="flaticon-thinking bg_2"></i>
                                     <div class="gt_wht_offer_des">
-                                        <h5><a href="#">Educazione Cosmica</a></h5>
+                                        <h5><a href="javascript:avoid(0);">Educazione Cosmica</a></h5>
                                         <span class="bg_offer_3"></span>
                                         <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet avida nibh vel velit auctor aliquet.</p>
                                     </div>
@@ -119,7 +119,7 @@
                                 <div class="gt_wht_offer_wrap mb">
                                     <i class="flaticon-hello-speech-bubble-handmade-chatting-symbol bg_1"></i>
                                     <div class="gt_wht_offer_des">
-                                        <h5><a href="#">Inglese</a></h5>
+                                        <h5><a href="javascript:avoid(0);">Inglese</a></h5>
                                         <span class="bg_offer_4"></span>
                                         <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet avida nibh vel velit auctor aliquet.</p>
                                     </div>
@@ -129,7 +129,7 @@
                                 <div class="gt_wht_offer_wrap mb">
                                     <i class="flaticon-artist bg_3"></i>
                                     <div class="gt_wht_offer_des">
-                                        <h5><a href="#">Arte</a></h5>
+                                        <h5><a href="javascript:avoid(0);">Arte</a></h5>
                                         <span class="bg_offer_5"></span>
                                         <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet avida nibh vel velit auctor aliquet.</p>
                                     </div>
@@ -139,7 +139,7 @@
                                 <div class="gt_wht_offer_wrap mb">
                                     <i class="flaticon-music-player bg_6"></i>
                                     <div class="gt_wht_offer_des">
-                                        <h5><a href="#">Musica</a></h5>
+                                        <h5><a href="javascript:avoid(0);">Musica</a></h5>
                                         <span class="bg_offer_6"></span>
                                         <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet avida nibh vel velit auctor aliquet.</p>
                                     </div>
