--- a/index-02.html
+++ b/index-02.html
@@ -280,7 +280,7 @@
         <div class="container">
             <div class="gt-top-bar default_width">
                 <div class="gt-logo">
-                    <a href="#"><img src="images/logo.png" alt=""></a>
+                    <a href="index.html"><img src="images/logo.png" alt=""></a>
                 </div>
                 
                 <!--top_navi_caption start-->
