--- a/index-one-page.html
+++ b/index-one-page.html
@@ -86,7 +86,7 @@
         <div class="gt_top3_menu default_width single-page">
             <div class="container">
                 <div class="gt-logo">
-                    <a href="#"><img src="images/logo.png" alt=""></a>
+                    <a href="index.html"><img src="images/logo.png" alt=""></a>
                 </div>
                 <nav class="gt_hdr3_navigation">
                     <!-- Responsive Buttun -->
