Gallery and images

--- a/gallery-style-01.html
+++ b/gallery-style-01.html
@@ -240,6 +240,25 @@
                                 </figure>
                             </div>  
                         </div>
+                        <div class="filterable-item all 2 4 1 5 col-md-4 col-sm-6 col-xs-12">
+                            <div class="edu_masonery_thumb">
+                                <figure>
+                                    <img src="extra-images/gallery-10.jpg" alt=""/>
+                                    <a href="extra-images/gallery-10.jpg" data-rel="prettyPhoto"><i class="fa fa-search"></i></a>
+                                </figure>
+                            </div>  
+                        </div>
+                        <div class="filterable-item all 2 4 1 5 col-md-4 col-sm-6 col-xs-12">
+                            <div class="edu_masonery_thumb">
+                                <figure>
+                                    <img src="extra-images/gallery-11.jpg" alt=""/>
+                                    <a href="extra-images/gallery-11.jpg" data-rel="prettyPhoto"><i class="fa fa-search"></i></a>
+                                </figure>
+                            </div>  
+                        </div>
+        
+
+
                     </div>
                 </div>
             </div>
