--- a/index.html
+++ b/index.html
@@ -103,27 +103,22 @@
                 <li class="swiper-slide">
                     <img src="extra-images/banner-01.jpg" alt="">
                     <div class="gt_banner_text gt_slide_1">
-                        <h3>Benvenuti</h3>
-                        <h2>Scuola Primaria Sorriso Montessori</h2>
+                        <h2>Benvenuti</h2>
+                        <h3>Scuola Primaria Sorriso Montessori</h3>
                     </div>
                 </li>                
                 <li class="swiper-slide">
                     <img src="extra-images/banner-02.jpg" alt="">
                     <div class="gt_banner_text gt_slide_2">
-                        <h3>Learning &#38; fun</h3>
-                        <h2>Perfevt Education</h2>
-                        <h3>Template for your kids</h3>
-                        <a href="#">see More</a>
-                        <a href="#">Buy Now!</a>
+                        <h4>Per insegnare bisogna emozionare.</h4>
+                        <h4>Molti però pensano ancora che se ti diverti non impari.</h4> 
+                        <h4>&nbsp;</h4>
+                        <h4 class="quote">Maria Montessori</h4> 
                     </div>
                 </li>
                 <li class="swiper-slide">
                     <img src="extra-images/banner-03.jpg" alt="">
                     <div class="gt_banner_text gt_slide_3">
-                        <h3>We will take care</h3>
-                        <h2>for your kids</h2>
-                        <a href="#">see More</a>
-                        <a href="#">Buy Now!</a>
                     </div>
                 </li>
              </ul>
@@ -197,92 +192,45 @@
                     <div class="item">
                         <div class="gt_blog_wrap">
                             <figure>
-                                <img src="extra-images/blog-01.jpg" alt="">
-                                <figcaption class="gt_blog_figcaption">
-                                    <ul>
-                                        <li><a href="#"><i class="fa fa-search"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-expand"></i></a></li>
-                                    </ul>
-                                </figcaption>
+                                <img src="extra-images/blog-03.jpg" alt="">
                             </figure>
                             <div class="gt_blog_des_wrap">
                                 <ul class="gt_blog_meta">
-                                    <li><i class="fa fa-calendar"></i>15 Sep 2016</li>
-                                    <li><i class="fa fa-heart"></i>17</li>
-                                    <li><i class="fa fa-comments"></i>04</li>
+                                    <li><i class="fa fa-calendar"></i>17 Dic 2017</li>
                                 </ul>
-                                <h5><a href="#">How kids think about earth</a></h5>
-                                <p>Lorem Ipsum proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsumnibh id elit. </p>
-                                <a href="#">Read More <i class="fa fa-arrow-circle-o-right"></i></a>
+                                <h5><a href="eventi/20171217-mercatino.html">Mercatino di Natale</a></h5>
+                                <p>Torte a volontà!<br><br><br><br></p>
+                                <a href="eventi/20171217-mercatino.html">Leggi <i class="fa fa-arrow-circle-o-right"></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="item">
                         <div class="gt_blog_wrap">
+                            <figure>
+                                <img src="extra-images/blog-01.jpg" alt="">
+                            </figure>
+                            <div class="gt_blog_des_wrap">
+                                <ul class="gt_blog_meta">
+                                    <li><i class="fa fa-calendar"></i>16 Dic 2017</li>
+                                </ul>
+                                <h5><a href="eventi/20171216-open-day.html">Open Day</a></h5>
+                                <p>Vi presentiamo la nostra scuola.<br>Vi aspettiamo a partire dalle 9.30<br><br><br></nr></p>
+                                <a href="eventi/20171216-open-day.html">Leggi <i class="fa fa-arrow-circle-o-right"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="gt_blog_wrap">                            
                             <figure>
                                 <img src="extra-images/blog-02.jpg" alt="">
-                                <figcaption class="gt_blog_figcaption">
-                                    <ul>
-                                        <li><a href="#"><i class="fa fa-search"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-expand"></i></a></li>
-                                    </ul>
-                                </figcaption>
                             </figure>
                             <div class="gt_blog_des_wrap">
                                 <ul class="gt_blog_meta">
-                                    <li><i class="fa fa-calendar"></i>15 Sep 2016</li>
-                                    <li><i class="fa fa-heart"></i>17</li>
-                                    <li><i class="fa fa-comments"></i>04</li>
+                                    <li><i class="fa fa-calendar"></i>16 Novembre 2017</li>
                                 </ul>
-                                <h5><a href="#">Standard Post With Preview Image</a></h5>
-                                <p>Lorem Ipsum proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsumnibh id elit. </p>
-                                <a href="#">Read More <i class="fa fa-arrow-circle-o-right"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="gt_blog_wrap">
-                            <figure>
-                                <img src="extra-images/blog-03.jpg" alt="">
-                                <figcaption class="gt_blog_figcaption">
-                                    <ul>
-                                        <li><a href="#"><i class="fa fa-search"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-expand"></i></a></li>
-                                    </ul>
-                                </figcaption>
-                            </figure>
-                            <div class="gt_blog_des_wrap">
-                                <ul class="gt_blog_meta">
-                                    <li><i class="fa fa-calendar"></i>15 Sep 2016</li>
-                                    <li><i class="fa fa-heart"></i>17</li>
-                                    <li><i class="fa fa-comments"></i>04</li>
-                                </ul>
-                                <h5><a href="#">How kids think about earth</a></h5>
-                                <p>Lorem Ipsum proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsumnibh id elit. </p>
-                                <a href="#">Read More <i class="fa fa-arrow-circle-o-right"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="gt_blog_wrap">
-                            <figure>
-                                <img src="extra-images/blog-04.jpg" alt="">
-                                <figcaption class="gt_blog_figcaption">
-                                    <ul>
-                                        <li><a href="#"><i class="fa fa-search"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-expand"></i></a></li>
-                                    </ul>
-                                </figcaption>
-                            </figure>
-                            <div class="gt_blog_des_wrap">
-                                <ul class="gt_blog_meta">
-                                    <li><i class="fa fa-calendar"></i>15 Sep 2016</li>
-                                    <li><i class="fa fa-heart"></i>17</li>
-                                    <li><i class="fa fa-comments"></i>04</li>
-                                </ul>
-                                <h5><a href="#">How kids think about earth</a></h5>
-                                <p>Lorem Ipsum proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsumnibh id elit. </p>
-                                <a href="#">Read More <i class="fa fa-arrow-circle-o-right"></i></a>
+                                <h5><a href="eventi/20171116-serata.html">Serata informativa</a></h5>
+                                <p>Sei interessato alla Scuola Primaria Montessoriana?<br><br><br></p>
+                                <a href="eventi/20171116-serata.html">Leggi <i class="fa fa-arrow-circle-o-right"></i></a>
                             </div>
                         </div>
                     </div>
@@ -333,12 +281,12 @@
                 </div>
                 <div class="item">
                     <div class="gt_gallery_wrap">
-                        <img src="extra-images/gallery-01.jpg" alt="">
+                        <img src="extra-images/gallery-06.jpg" alt="">
                     </div>
                 </div>
                 <div class="item">
                     <div class="gt_gallery_wrap">
-                        <img src="extra-images/gallery-02.jpg" alt="">
+                        <img src="extra-images/gallery-07.jpg" alt="">
                     </div>
                 </div>
             </div>
