--- a/gallery.html
+++ b/gallery.html
@@ -162,9 +162,71 @@
                                     </figure>
                                 </div>  
                             </div>
-                        </div>
-                    </div>
-                </div>
+                            <div class="filterable-item all 2 4 1 5 col-md-4 col-sm-6 col-xs-12">
+                                    <div class="edu_masonery_thumb">
+                                        <figure>
+                                            <img src="extra-images/gallery-10.jpg" alt=""/>
+                                            <a href="extra-images/gallery-10.jpg" data-rel="prettyPhoto"><i class="fa fa-search"></i></a>
+                                        </figure>
+                                    </div>  
+                                </div>
+                            <div class="filterable-item all 2 4 1 5 col-md-4 col-sm-6 col-xs-12">
+                                    <div class="edu_masonery_thumb">
+                                        <figure>
+                                            <img src="extra-images/gallery-11.jpg" alt=""/>
+                                            <a href="extra-images/gallery-11.jpg" data-rel="prettyPhoto"><i class="fa fa-search"></i></a>
+                                        </figure>
+                                    </div>  
+                                </div>
+                                <div class="filterable-item all 2 4 1 5 col-md-4 col-sm-6 col-xs-12">
+                                        <div class="edu_masonery_thumb">
+                                            <figure>
+                                                <img src="extra-images/gallery-12.jpg" alt=""/>
+                                                <a href="extra-images/gallery-12.jpg" data-rel="prettyPhoto"><i class="fa fa-search"></i></a>
+                                            </figure>
+                                        </div>  
+                                    </div>                                
+                                <div class="filterable-item all 2 4 1 5 col-md-4 col-sm-6 col-xs-12">
+                                        <div class="edu_masonery_thumb">
+                                            <figure>
+                                                <img src="extra-images/gallery-13.jpg" alt=""/>
+                                                <a href="extra-images/gallery-13.jpg" data-rel="prettyPhoto"><i class="fa fa-search"></i></a>
+                                            </figure>
+                                        </div>  
+                                    </div>
+                                    <div class="filterable-item all 2 4 1 5 col-md-4 col-sm-6 col-xs-12">
+                                            <div class="edu_masonery_thumb">
+                                                <figure>
+                                                    <img src="extra-images/gallery-14.jpg" alt=""/>
+                                                    <a href="extra-images/gallery-14.jpg" data-rel="prettyPhoto"><i class="fa fa-search"></i></a>
+                                                </figure>
+                                            </div>  
+                                        </div>
+                                        <div class="filterable-item all 2 4 1 5 col-md-4 col-sm-6 col-xs-12">
+                                                <div class="edu_masonery_thumb">
+                                                    <figure>
+                                                        <img src="extra-images/gallery-15.jpg" alt=""/>
+                                                        <a href="extra-images/gallery-15.jpg" data-rel="prettyPhoto"><i class="fa fa-search"></i></a>
+                                                    </figure>
+                                                </div>  
+                                            </div>
+                                            <div class="filterable-item all 2 4 1 5 col-md-4 col-sm-6 col-xs-12">
+                                                    <div class="edu_masonery_thumb">
+                                                        <figure>
+                                                            <img src="extra-images/gallery-16.jpg" alt=""/>
+                                                            <a href="extra-images/gallery-16.jpg" data-rel="prettyPhoto"><i class="fa fa-search"></i></a>
+                                                        </figure>
+                                                    </div>  
+                                                </div>
+                                                <div class="filterable-item all 2 4 1 5 col-md-4 col-sm-6 col-xs-12">
+                                                        <div class="edu_masonery_thumb">
+                                                            <figure>
+                                                                <img src="extra-images/gallery-17.jpg" alt=""/>
+                                                                <a href="extra-images/gallery-17.jpg" data-rel="prettyPhoto"><i class="fa fa-search"></i></a>
+                                                            </figure>
+                                                        </div>  
+                                                    </div>
+                                    </div>
             </section>
             <!--Gallery Wrap End-->
         </div>
