Index and events

--- a/eventi.html
+++ b/eventi.html
@@ -102,7 +102,7 @@
                                     <li><i class="fa fa-calendar"></i>16 Dic 2017</li>
                                 </ul>
                                 <h5><a href="eventi/20171216-open-day.html">Open Day</a></h5>
-                                <p>Vi presentiamo la nostra scuola.<br>Vi aspettiamo a partire dalle 9.30<br><br><br></nr></p>
+                                <p>Vi presentiamo la nostra scuola.<br>Vi aspettiamo a partire dalle 9.30<br><br><br></p>
                                 <a href="eventi/20171216-open-day.html">Leggi <i class="fa fa-arrow-circle-o-right"></i></a>
                             </div>
                         </div>
